[gd_scene load_steps=3 format=3 uid="uid://doebw2afwlja6"]

[ext_resource type="Script" path="res://action_sequences/state_container.gd" id="1_av54i"]
[ext_resource type="Texture2D" uid="uid://dp87jsrvjqb8e" path="res://UI/cross-mark_lorc.png" id="2_c8mpg"]

[node name="StateContainer" type="PanelContainer"]
theme_type_variation = &"FloatingPanel"
script = ExtResource("1_av54i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StateOptions" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
alignment = 2

[node name="SelectButton" type="CheckButton" parent="MarginContainer/VBoxContainer/StateOptions"]
visible = false
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="DeleteBranchButton" type="Button" parent="MarginContainer/VBoxContainer/StateOptions"]
self_modulate = Color(0.882353, 0.439216, 0.333333, 1)
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_type_variation = &"SmallBtn"
icon = ExtResource("2_c8mpg")
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Action Label" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"FloatingPanel"

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/Action Label"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
text = "Action"
placeholder_text = "Action Label"
wrap_mode = 1

[node name="StateContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="StateLabel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/StateContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
theme_type_variation = &"PanelDisplay"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/StateContainer/StateLabel"]
layout_mode = 2
placeholder_text = "State Label"

[node name="StateDescription" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/StateContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/StateContainer/StateDescription"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
placeholder_text = "State description"
wrap_mode = 1

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ActsRoot" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CreateActionButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ActsRoot"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Create
Action"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StateOptions/DeleteBranchButton" to="." method="_on_delete_branch_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ActsRoot/CreateActionButton" to="." method="_on_create_action_button_pressed"]
